# wireless-clearcom

./: CMakeLists.txt  README.md  SPECIFICATION.md  sdkconfig
main/: CMakeLists.txt  KNOWN_ISSUES.md  config.h  config_base.h  config_common.h  config_pack.h  idf_component.yml  main.c  test_mode_base.c  test_mode_base.h  test_mode_pack.c  test_mode_pack.h
main/audio/: audio_codec.c  audio_codec.h  audio_jitter_buffer.c  audio_jitter_buffer.h  audio_opus.c  audio_opus.h  audio_processor.c  audio_processor.h  audio_tones.c  audio_tones.h
main/hardware/: battery.c  battery.h  clearcom_line.c  clearcom_line.h  gpio_control.c  gpio_control.h  ptt_control.c  ptt_control.h  volume_control.c  volume_control.h
main/network/: udp_transport.c  udp_transport.h  wifi_manager.c  wifi_manager.h
main/system/: call_module.c  call_module.h  device_manager.c  device_manager.h  diagnostics.c  diagnostics.h  power_manager.c  power_manager.h
